first commit in over a week. Building a model

--- a/Diamonds.ipynb
+++ b/Diamonds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,14 @@
     "import seaborn as sns\n",
     "import missingno as msno\n",
     "import warnings\n",
-    "from scipy.stats import f_oneway"
+    "from scipy.stats import f_oneway\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +246,7 @@
        "[53940 rows x 11 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +466,7 @@
        "9  Negative  Negative  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +685,7 @@
        "53939  44.324759  Negative       SP  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +723,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +744,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -763,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +926,7 @@
        "[53940 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1014,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1168,7 @@
        "<Axes: xlabel='carat', ylabel='price'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1187,16 +1189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f02236c090>"
+       "<matplotlib.collections.PathCollection at 0x1e969131c90>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1231,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1271,7 @@
        "Index(['cut', 'colour', 'clarity', 'P', 'PC'], dtype='object')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1428,6 +1430,289 @@
    "metadata": {},
    "source": [
     "Categorical values that are correlated are [cut, colour and clarity]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MODELS ,  PREDICTIONS AND TESTING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['carat', 'cut', 'colour', 'clarity', 'depth', 'price', 'x', 'y', 'P',\n",
+       "       'PC'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diamondx.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cut</th>\n",
+       "      <th>colour</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1417.391304</td>\n",
+       "      <td>5.300813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Premium</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1552.380952</td>\n",
+       "      <td>5.451505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>E</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1421.739130</td>\n",
+       "      <td>5.746924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Premium</td>\n",
+       "      <td>I</td>\n",
+       "      <td>VS2</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>1151.724138</td>\n",
+       "      <td>5.352564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Good</td>\n",
+       "      <td>J</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>1080.645161</td>\n",
+       "      <td>5.292259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       cut colour clarity  carat            x         y\n",
+       "0    Ideal      E     SI2   0.23  1417.391304  5.300813\n",
+       "1  Premium      E     SI1   0.21  1552.380952  5.451505\n",
+       "2     Good      E     VS1   0.23  1421.739130  5.746924\n",
+       "3  Premium      I     VS2   0.29  1151.724138  5.352564\n",
+       "4     Good      J     SI2   0.31  1080.645161  5.292259"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictors= diamondx[[\"cut\",\"colour\",\"clarity\",\"carat\",\"x\",\"y\"]]\n",
+    "predictors.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CONVERTING CATEGORICAL DATA TO CONTINUOUS DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder,LabelEncoder\n",
+    "label_encoder=LabelEncoder()\n",
+    "predictors[\"cut\"]=label_encoder.fit_transform(predictors[\"cut\"])\n",
+    "predictors[\"colour\"]=label_encoder.fit_transform(predictors[\"colour\"])\n",
+    "predictors[\"clarity\"]=label_encoder.fit_transform(predictors[\"clarity\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cut</th>\n",
+       "      <th>colour</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1417.391304</td>\n",
+       "      <td>5.300813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>1552.380952</td>\n",
+       "      <td>5.451505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>1421.739130</td>\n",
+       "      <td>5.746924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>1151.724138</td>\n",
+       "      <td>5.352564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>1080.645161</td>\n",
+       "      <td>5.292259</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cut  colour  clarity  carat            x         y\n",
+       "0    2       1        3   0.23  1417.391304  5.300813\n",
+       "1    3       1        2   0.21  1552.380952  5.451505\n",
+       "2    1       1        4   0.23  1421.739130  5.746924\n",
+       "3    3       5        5   0.29  1151.724138  5.352564\n",
+       "4    1       6        3   0.31  1080.645161  5.292259"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictors.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##assigning predictors and variables\n",
+    "X,y =predictors,diamondx[\"price\"]\n",
+    "\n",
+    "##splitting the testing and training\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "\n",
+    "##creating a model\n",
+    "linear_model=LinearRegression()\n",
+    "linear_model.fit(X_train,y_train)\n",
+    "\n"
    ]
   }
  ],
