Testing using different modles

--- a/Diamonds.ipynb
+++ b/Diamonds.ipynb
@@ -1688,20 +1688,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n"
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.metrics import r2_score, mean_squared_error , mean_squared_log_error\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import RandomForestRegressor\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "USING LINEAR REGRESSION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy: 0.9992237350759261 \n",
+      " Mean Square Error: 9092.053321742927 \n",
+      " Mean Square log error: 0.0007664314520694703\n"
+     ]
+    }
+   ],
    "source": [
     "##assigning predictors and variables\n",
     "X,y =predictors,diamondx[\"price\"]\n",
@@ -1712,7 +1732,138 @@
     "##creating a model\n",
     "linear_model=LinearRegression()\n",
     "linear_model.fit(X_train,y_train)\n",
-    "\n"
+    "\n",
+    "#predicting\n",
+    "y_prediction=linear_model.predict(X_test)\n",
+    "\n",
+    "##evaluate the model\n",
+    "mse= mean_squared_error(y_test,y_prediction)\n",
+    "r2=r2_score(y_test,y_prediction)\n",
+    "msle=mean_squared_log_error(y_test,y_prediction)\n",
+    "\n",
+    "print(f\" Accuracy: {r2} \\n Mean Square Error: {mse} \\n Mean Square log error: {msle}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "USING KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy: 0.9982753371956261 \n",
+      " Mean Square Error: 20200.22506891016 \n",
+      " Mean Square log error: 0.0017569697344262131\n"
+     ]
+    }
+   ],
+   "source": [
+    "##assigning predictors and variables\n",
+    "X,y =predictors,diamondx[\"price\"]\n",
+    "\n",
+    "##splitting the testing and training\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "\n",
+    "##creating a model\n",
+    "linear_model=KNeighborsRegressor(n_neighbors=3)\n",
+    "linear_model.fit(X_train,y_train)\n",
+    "\n",
+    "#predicting\n",
+    "y_prediction=linear_model.predict(X_test)\n",
+    "\n",
+    "##evaluate the model\n",
+    "mse= mean_squared_error(y_test,y_prediction)\n",
+    "r2=r2_score(y_test,y_prediction)\n",
+    "msle=mean_squared_log_error(y_test,y_prediction)\n",
+    "\n",
+    "print(f\" Accuracy: {r2} \\n Mean Square Error: {mse} \\n Mean Square log error: {msle}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "USING SUPPORT VECTOR MACHINE\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy: 0.8218003974506773 \n",
+      " Mean Square Error: 2087174.4143595265 \n",
+      " Mean Square log error: 0.09730261660006569\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "##creating a model\n",
+    "svm_model=SVR()\n",
+    "svm_model.fit(X_train,y_train)\n",
+    "\n",
+    "#predicting\n",
+    "y_prediction=svm_model.predict(X_test)\n",
+    "\n",
+    "##evaluate the model\n",
+    "mse= mean_squared_error(y_test,y_prediction)\n",
+    "r2=r2_score(y_test,y_prediction)\n",
+    "msle=mean_squared_log_error(y_test,y_prediction)\n",
+    "\n",
+    "print(f\" Accuracy: {r2} \\n Mean Square Error: {mse} \\n Mean Square log error: {msle}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "USING RANDOM FOREST REGRESSOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Accuracy: 0.9995665124454925 \n",
+      " Mean Square Error: 5077.251126083194 \n",
+      " Mean Square log error: 0.0002350079075331375\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "##creating a model\n",
+    "random_forest_model=RandomForestRegressor()\n",
+    "random_forest_model.fit(X_train,y_train)\n",
+    "\n",
+    "#predicting\n",
+    "y_prediction=random_forest_model.predict(X_test)\n",
+    "\n",
+    "##evaluate the model\n",
+    "mse= mean_squared_error(y_test,y_prediction)\n",
+    "r2=r2_score(y_test,y_prediction)\n",
+    "msle=mean_squared_log_error(y_test,y_prediction)\n",
+    "\n",
+    "print(f\" Accuracy: {r2} \\n Mean Square Error: {mse} \\n Mean Square log error: {msle}\")\n"
    ]
   }
  ],
