--- a/Diamonds.ipynb
+++ b/Diamonds.ipynb
@@ -1865,6 +1865,20 @@
     "\n",
     "print(f\" Accuracy: {r2} \\n Mean Square Error: {mse} \\n Mean Square log error: {msle}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SAVING THE MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
